--- a/build-serialtool-Desktop_Qt_5_8_0_MinGW_32bit-Release/Makefile.Debug
+++ b/build-serialtool-Desktop_Qt_5_8_0_MinGW_32bit-Release/Makefile.Debug
@@ -637,6 +637,32 @@ debug/mainwindow.o: ../source\ codes/mainwindow.cpp ../source\ codes/mainwindow.
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QGroupBox \
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qgroupbox.h \
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/QDebug \
+		UI_mainwindow.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/QVariant \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QAction \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qaction.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qactiongroup.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QApplication \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qapplication.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/qcoreapplication.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/qeventloop.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qdesktopwidget.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtGui/qguiapplication.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtGui/qinputmethod.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QButtonGroup \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qbuttongroup.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QHeaderView \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qheaderview.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qabstractitemview.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtCore/qitemselectionmodel.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QMenuBar \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qmenubar.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qmenu.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QStatusBar \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qstatusbar.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QToolBar \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qtoolbar.h \
+		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QWidget \
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/QMessageBox \
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qmessagebox.h \
 		D:/Qt/Qt5.8.0/5.8/mingw53_32/include/QtWidgets/qdialog.h
